Fix even spacing on card when title wraps on multiple lines

--- a/src/components/Screening/style.module.scss
+++ b/src/components/Screening/style.module.scss
@@ -2,7 +2,7 @@
 .card {
     padding: 10px 20px;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(12, minmax(0, 1fr));
     grid-template-rows: auto;
 }
 .cardItem{
@@ -19,19 +19,18 @@
     grid-column: 1 / span 3;
 }
 .title {
-
+    height: 44px;
     grid-row: 1 / span 1;
     grid-column: 4 / span 9;
     font-size: 24px;
-    margin-top: 0;
 }
 .date {
-    grid-row: 3 / span 1;
+    grid-row: 4 / span 1;
     grid-column: 4 / span 6;
     font-size: 18px;
 }
 .location {
-    grid-row: 4 / span 1;
+    grid-row: 5 / span 1;
     grid-column: 4 / span 5;
     font-size: 12px;
     margin-top: 0;
